log
Wed, Mar 26, 2025  8:41:28 AM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:36:5: error: expected ';' before 'return'
     return list;
     ^~~~~~
list.c:37:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
25021aa
Wed, Mar 26, 2025  8:41:46 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c82cc38
Wed, Mar 26, 2025  8:45:29 AM: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:41:43: error: 'Node {aka struct Node}' has no member named 'key'
     if(list->current) return list->current->key;
                                           ^~
Compilation failed
2fc4ae2
Wed, Mar 26, 2025  8:46:01 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
53fbaad
Wed, Mar 26, 2025  8:50:57 AM: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|4
total_score: 25/70
bc4da6a
Wed, Mar 26, 2025  8:57:05 AM: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:0:
list.c: In function 'lastList':
list.c:52:17: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
     List* aux = list->current;
                 ^~~~
list.c:54:44: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
         if(aux->current->next != NULL) aux = list->current->next;
                                            ^
cc1.exe: all warnings being treated as errors
Compilation failed
baf39fa
Wed, Mar 26, 2025  8:58:10 AM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'lastList':
list.c:52:17: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
     List* aux = list->current;
                 ^~~~
list.c:54:13: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
         aux = list->current->next;
             ^
cc1.exe: all warnings being treated as errors
Compilation failed
c9ff99a
Wed, Mar 26, 2025  8:59:53 AM: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
list.c: In function 'lastList':
list.c:52:17: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
     List* aux = list->head;
                 ^~~~
list.c:53:14: error: 'List {aka struct List}' has no member named 'next'
     while(aux->next != NULL){
              ^~
list.c:54:19: error: 'List {aka struct List}' has no member named 'next'
         aux = list->next;
                   ^~
cc1.exe: all warnings being treated as errors
Compilation failed
aeaa204
Wed, Mar 26, 2025  9:00:58 AM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'lastList':
list.c:52:17: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
     List* aux = list->head;
                 ^~~~
list.c:54:13: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
         aux = list->current->next;
             ^
cc1.exe: all warnings being treated as errors
Compilation failed
2d611b8
Wed, Mar 26, 2025  9:08:26 AM: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'lastList':
list.c:53:14: error: 'Node {aka struct Node}' has no member named 'current'
     while(aux->current->next != NULL){
              ^~
Compilation failed
990826d
Wed, Mar 26, 2025  9:08:57 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|0
   [ INFO ] llamando a lastList
dfb9344
Wed, Mar 26, 2025  9:12:48 AM: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
C:\Users\ESTUDI~1\AppData\Local\Temp\cc2LnmKl.o:test.c:(.text+0x68c): undefined reference to `lastList'
collect2.exe: error: ld returned 1 exit status
Compilation failed
84d1ed4
Wed, Mar 26, 2025  9:13:39 AM: 
 list.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  5|4
total_score: 25/70
6cfa5df
Wed, Mar 26, 2025  9:15:04 AM: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 25/70
532feb0
Wed, Mar 26, 2025  9:16:00 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
7d49d06
Wed, Mar 26, 2025  9:17:14 AM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'lastList':
list.c:60:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
1e6d32c
Wed, Mar 26, 2025  9:18:38 AM: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'lastList':
list.c:59:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
4b2c54f
Wed, Mar 26, 2025  9:22:14 AM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'lastList':
list.c:60:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
517ac52
Wed, Mar 26, 2025  9:22:40 AM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 25/70
2d94d41
Wed, Mar 26, 2025  9:27:22 AM: 
 list.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
In file included from test.c:5:0:
list.c: In function 'lastList':
list.c:60:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
890adc3
Wed, Mar 26, 2025  9:28:16 AM: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'lastList':
list.c:59:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
bfbb608
Wed, Mar 26, 2025  9:28:58 AM: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'lastList':
list.c:63:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
e5765c8
Wed, Mar 26, 2025  9:32:46 AM: 
 list.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
list.c: In function 'lastList':
list.c:57:5: error: expected ';' before '}' token
     }
     ^
list.c:61:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
02e60a1
Wed, Mar 26, 2025  9:32:55 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'lastList':
list.c:61:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
03e0ad8
Wed, Mar 26, 2025  9:33:18 AM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 25/70
6aa9949
Wed, Mar 26, 2025  9:34:45 AM: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|4
total_score: 25/70
112b329
Wed, Mar 26, 2025  9:35:20 AM: 
 list.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  5|4
total_score: 25/70
afe7598
Wed, Mar 26, 2025  9:36:00 AM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 25/70
a76b878
Wed, Mar 26, 2025  9:36:50 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
9543367
Wed, Mar 26, 2025  9:42:09 AM: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  9|3
total_score: 35/70
1782343
Wed, Mar 26, 2025  9:43:18 AM: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  9|3
total_score: 35/70
7442088
Thu, Mar 27, 2025  5:26:43 PM: 
 tests:  9|3
total_score: 35/70
57f4856
Thu, Mar 27, 2025  5:32:53 PM: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'prevList':
list.c:66:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
4b32b36
Thu, Mar 27, 2025  5:33:12 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
d318541
Thu, Mar 27, 2025  6:02:14 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:76:5: error: statement with no effect [-Werror=unused-value]
     list
     ^~~~
list.c:78:1: error: expected ';' before '}' token
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
0fa661c
Thu, Mar 27, 2025  6:03:16 PM: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  9|3
total_score: 35/70
5fb869b
Thu, Mar 27, 2025  6:05:41 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
11394d7
Thu, Mar 27, 2025  6:15:46 PM: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  9|3
total_score: 35/70
c8258a2
Thu, Mar 27, 2025  6:23:13 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
da8c6d1
